--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Rambles-in-Germany-and-Italy-in-1840-1842-and-1843-vol-2-of-2_74301
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 74301-h/images/cover.jpg
 creator:
   author:
     agent_name: Shelley, Mary Wollstonecraft
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/61
     wikipedia: https://en.wikipedia.org/wiki/Mary_Wollstonecraft_Shelley
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74301#Rambles-in-Germany-and-Italy-in-1840-1842-and-1843-vol-2-of-2
 gutenberg_issued: '2024-08-23'
 gutenberg_type: Text
 identifiers:
